# CinCity

./: .gitignore  README.md
Jonny/: CMakeLists.txt  dijkstras.cpp  helloWorld.cpp  huffmanCoding.cpp  pModInt.cpp  template.cpp  unionFind.cpp
Jonny/KattisProblems/: 10KindsOfPeople.cpp
Jonny/MSOE2021Summer/Week1/: PearWiseVoting.cpp  PizzaCutting.cpp  RomanHolidays.cpp
Jonny/NAC2021/: CleaningRobot.cpp  ContestConstruction.cpp  ThePaladin.cpp  TravelLog.cpp  YouBeTheJudgeAgain.cpp
Jonny/NADC2021/: YouBeTheJudge.cpp
Jonny/NADC2021/srcJava/: module-info.java
Jonny/NADC2021/srcJava/keanej/: SimpleCronSpec.java
Jonny/NAPC2021/: 2dRangeMinimumQuery.cpp
Jonny/NAPC2021/Day2Contest/: Commando.cpp  Eve.cpp  KnockoutRacing.cpp  Shuffle.cpp  Squares.cpp
Jonny/NAPC2021/Day4Contest/: BinomialCoefficients.cpp  BinomialCoefficients2.cpp  ElementaryMath.cpp  ElementaryMath2.cpp  JokeWithPermutation.cpp
Jonny/NCNARegional2020/: ProblemC.cpp  ProblemD.cpp  ProblemF.cpp  ProblemI.cpp  ProblemJ.cpp  ProblemK.cpp
Jonny/NSAChallenge/: nsa_challenge.cpp
Jonny/PracticeNADC/: problemA.cpp  problemB.cpp  problemE.cpp  problemF.cpp  problemG.cpp  problemI.cpp  problemK.cpp
Jonny/PracticeNCNA/: eulers.cpp
LibraryCode/: ArrayInput.cpp  README.md  string_split.cpp
LibraryCode/Bits/: bitmask.cpp
LibraryCode/Graphs/: Dijkstras.cpp  DinicsAlgorithmMaxFlow.cpp  Kosaraju.cpp  MaxFlow.cpp
LibraryCode/IO/: ArrayInput.cpp  fastIO.cpp
LibraryCode/Math/: .exponents.cpp.swp  exponents.cpp  gcd.cpp  line.cpp  lis.cpp  point.cpp
LibraryCode/StringWork/: stringJoin.cpp  stringTrim.cpp
LibraryCode/Structures/: FenwickTree.cpp  MinSparseTable.cpp  MultiDimensionTemplateArray.cpp  c_trie.cpp  ordered_trie.cpp  seg_treee.cpp
Mitchell/: ProbC.kt  nPr_modp.cpp  template.cpp
Mitchell/Advent2020/: P01.py
Mitchell/CodeForces/2021.05.20/: probA.cpp  probD.cpp
Mitchell/CodeJam2021/CodeJam2021Round0/: MedianSort.cpp  Reversort.cpp  (+2 more)
Mitchell/NCNA2020Regional/: ProblemI.cpp
Mitchell/PracticeNCNA2020/: ProblemK.cpp
Mitchell/PracticeProblems/: .10KindsOfPeople.cpp.swp  10KindsOfPeople.cpp
NCNA2020Regional/: ProblemA.cpp  ProblemH.cpp  ProblemI.cpp
Sam/: judge_regex.txt
Sam/Algorithms/: KMP.cpp
Sam/codejam2021/: .reversesort.cpp.swp  append.cpp  moon.cpp  reversesort.cpp  rse.cpp
Sam/icpcpc21superregionals/: judge.cpp  stickr.cpp
Sam/kattis/: array.cpp  catalannumbers.py  coldputer.cpp  curvy.cpp  distance.cpp  dungeonmaster.cpp  eligibility.cpp  eyeofsauron.py  fizzbuzz.cpp  hissingmicrophone.cpp  hothike.cpp  magictrick.cpp  mathemagicians.cpp  missingnumber.cpp  oddities.cpp  qaly.cpp  quiteaproblem.cpp  raidteams.cpp  repeatedsubstrings.cpp  server.cpp  stopwatch.cpp  tarifa.cpp  taxededitor.cpp
(+61 files in other folders)
